EventData: fix pagination; make full-size, allow text wrapping

--- a/app/Resources/assets/css/events.scss
+++ b/app/Resources/assets/css/events.scss
@@ -76,12 +76,4 @@
         position: absolute;
         top: 0;
     }
-
-    .event-revisions {
-        overflow-x: scroll;
-    }
-
-    .event-revision {
-        white-space: nowrap;
-    }
 }
